# AutoDrum

./: Cargo.toml  config.yaml  system-config.yaml
src/: autodrum.rs  ble_test.rs  ble_test_io.rs  configuration.rs  drum.rs  lib.rs  logger.rs  main.rs  midi_ble.rs  remote_command.rs  striker.rs  striker_hardware_util.rs  system_config.rs  system_constants.rs
src/comms/: midi_ble.rs  mod.rs  remote_command.rs
src/debug/: logger.rs
src/hardware/: mod.rs  modifier.rs  striker.rs  striker_hardware_util.rs
src/system/: configuration.rs  mod.rs  system_constants.rs
supportingFiles/: BACKUP-bluetooth.service  bluetooth.service  machine-info
