[package]
name = "auto_drum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
btleplug = "0.10.5"
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = "1.3.1"
futures = "0.3.28"
sysfs_gpio = "0.6.1"
tokio-gpiod = "0.2.3"