[package]
name = "auto_drum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
bluer = { version = "0.16.1", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = "1.3.1"
futures = "0.3.28"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tokio-timerfd = "0.2.0"
rand = "0.8.5"
serde_yaml = "0.9.25"
lazy_static = "1.4.0"
config = "0.13.3"

